// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiHeaderBreadcrumb href is rendered 1`] = `
<a
  class="kuiHeaderBreadcrumb"
  href="#"
>
  <div
    class="kuiHeaderBreadcrumb__text"
  />
</a>
`;

exports[`KuiHeaderBreadcrumb is rendered 1`] = `
<a
  class="kuiHeaderBreadcrumb testClass1 testClass2"
>
  <div
    class="kuiHeaderBreadcrumb__text"
  >
    content
  </div>
</a>
`;

exports[`KuiHeaderBreadcrumb isActive is rendered 1`] = `
<a
  class="kuiHeaderBreadcrumb isActive"
>
  <div
    class="kuiHeaderBreadcrumb__text"
  />
</a>
`;
